# matplotlib-sixel-backend

./: .gitignore  README.md  matplotlib-backend-sixel.py  pyproject.toml
sixel/: converter.py
src/matplotlib-backend-sixel/: __init__.py
