[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Matplotlib",
    "Topic :: Terminals",
]
dependencies = [
    "matplotlib",
    "sixel @ git+https://github.com/jpkline/python-sixel.git",
]
name = "matplotlib-backend-sixel"
readme = "README.md"
requires-python = ">=3.6"
version = "1.2.0"

[project.optional-dependencies]
dev = [
    "codespell",
    "coverage",
    "numpy",
    "pre-commit",
    "pytest",
    "ruff>=0.5.3; python_version>='3.7'",
    "ruff<0.5.3; python_version=='3.6'",
]

[project.urls]
"Bug Tracker" = "https://github.com/ctorney/matplotlib-backend-sixel/issues"
"Homepage" = "https://github.com/ctorney/matplotlib-backend-sixel"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["C901", "I", "RUF022"]

[tool.setuptools]
package-dir = { "" = "src" }
